tests/Casm/negative/test001.casm
-- Undefined label

start:
  [ap] = label; ap++
